--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="pusher">
       <section id="main" class="dark center">
         <div class="ui container">
-          <img id="logo" src="img/logo_clear.svg" onerror="this.onerror=null; this.src='img/logo_clear.png'" class="logo">
-          <div id="maintitle" class="title">Pokerbots</div>
+          <img id="logo" src="img/logo_clear.png" onerror="this.onerror=null; this.src='img/logo_clear.png'" class="logo">
+          <div id="maintitle" class="title">UNC Pokerbots</div>
           <div class="text">
             <!-- <p>Pokerbots 2024 registration is <a href="https://pkr.bot/register">live</a>!</p>
             <p>Schedule can be accessed <a href="/img/2024schedule.png">here</a></p>
@@ -37,8 +37,9 @@
             <!-- Pre-registration for Pokerbots IAP 2023 opening soon! Info sessions: -->
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
-            <p>Thank you for participating in Pokerbots 2024! </p> 
-            <p>Stay tuned for next year</p>
+            <p>Get ready for the Pokerbots 2024-2025 season!</p> 
+         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
+            <!-- p>Stay tuned for next year</p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
           </div>
           <!-- <div class="text">
@@ -98,18 +99,15 @@
                 <p>Teams may be composed of 1-4 students.</p>
               </div>
               <div class="column">
-                <h2>How do I receive course credit?</h2>
-                <p>You will need to submit functioning pokerbots for various checkpoints throughout the course, as well as a short strategy report at the end of IAP.</p>
+                <h2>How do I register?</h2>
+                <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">Sign up</a> and we will notify you when competition registration opens.</p>
               </div>
+              
             </div>
             <div class="row">
               <div class="column">
-                <h2>Do I have to be an MIT student to participate?</h2>
-                <p>For our course and tournament in January, you must be able to register for MIT IAP classes. If you are cross-registering, bring your papers in on the first day of class for us to sign. At least one member of your team must have MIT certificates to access our competition server.</p>
-              </div>
-              <div class="column">
-                <h2>How do I register?</h2>
-                <p>IAP pre-registration will open in December!</p>
+                <h2>Do I have to be a UNC student to participate?</h2>
+                <p>No, you do not have to be a UNC student to participate- you can also be a Duke or NCSU student. If you are from none of these three schools, you can still sign up for our <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">mailing list</a> and we will notify you as soon as you are eligible to compete.</p>
               </div>
               <div class="column">
                 <h2>How much time will it take to make a pokerbot?</h2>
@@ -123,27 +121,39 @@
         <img src="img/heart.svg" onerror="this.onerror=null; this.src='img/heart.png'" class="bg right">
         <div class="ui container">
           <div class="title">2024 Sponsors</div>
-          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:pokerbots-sponsor@mit.edu">pokerbots-sponsor@mit.edu</a>.</div>
+          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:yvsemlani@unc.edu">yvsemlani@unc.edu</a>.</div>
+          <div class="diamond">
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND TIER</span></span>
+            <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
+            <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
+          </div>
           <div class="platinum">
-             <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
-             <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM TIER</span></span>
+            <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
+            <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
           </div>
           <div class="gold">
-            <a href="https://www.citadel.com"><img src="img/logos/2024_Gold_Citadel.png"></a>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD TIER</span></span>
+            <!-- <a href="https://www.citadel.com"><img src="img/logos/2024_Gold_Citadel.png"></a>
             <a href="https://www.drw.com"><img src="img/logos/2022_Gold_DRW.png"></a>
             <a href="https://www.janestreet.com"><img src="img/logos/2024_Gold_JaneStreet.png"></a>
             <a href="https://www.jumptrading.com/"><img src="img/logos/2022_Gold_JumpTrading.png"></a>
             <a href="https://trexquant.com/"><img src="img/logos/2024_Gold_Trexquant2.png"></a>
             <a href="https://www.seveneightcapital.com/"><img src="img/logos/Gold_SevenEight.jpg"></a>
             <a href="https://www.sig.com"><img src="img/logos/2022_Gold_SIG.jpg"></a>
-            <a href="https://fiverings.com/"><img src="img/logos/2024_Gold_FiveRings.png"></a>
+            <a href="https://fiverings.com/"><img src="img/logos/2024_Gold_FiveRings.png"></a> -->
           </div>
           <div class="silver">
-            <a href="https://akunacapital.com/"><img src="img/logos/2024_Silver_Akuna.png"></a>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#82969a;'>SILVER TIER</span></span>
+            <!-- <a href="https://akunacapital.com/"><img src="img/logos/2024_Silver_Akuna.png"></a>
             <a href="https://www.chicagotrading.com"><img src="img/logos/2024_Silver_CTC.jpg"></a>
             <a href="https://www.hap-capital.com/"><img src="img/logos/2022_Platinum_HAP.png"</a>
-            <!-- <a href="https://www.imc.com"><img src="img/logos/Gold_IMC.png"></a> -->
-            <a href="https://www.twosigma.com"><img src="img/logos/2024_Silver_TwoSigma.jpg"></a>
+            <a href="https://www.imc.com"><img src="img/logos/Gold_IMC.png"></a>
+            <a href="https://www.twosigma.com"><img src="img/logos/2024_Silver_TwoSigma.jpg"></a> --> -
+          </div>
+          <div class="bronze">
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE TIER</span></span>
+            <!-- <a href="https://akunacapital.com/"><img src="img/logos/cover2.jpg"></a> -->
           </div>
         </div>
       </section>
@@ -153,203 +163,28 @@
           <div class="title">Meet the team!</div>
           <div class="team grid">
             <div class="team single">
-              <img src="img/headshots/alex_inf.png">
+              <img src="img/logos/1657424861593.jpeg">
               <div class="about">
-                <div class="name"><strong>Alexander Zhang '26</strong></div>
+                <div class="name"><strong>Yash Semlani '28</strong></div>
                 <div class="position">President</div>
               </div>
             </div>
             <div class="team single">
-              <img src="img/headshots/dylan.jpg">
+              <img src="img/logos/IMG_1184.PNG">
               <div class="about">
-                <div class="name"><strong>Dylan Dong '24</strong></div>
+                <div class="name"><strong>Samir Kassam '29</strong></div>
                 <div class="position">Vice President</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/gaurab.png">
-              <div class="about">
-                <div class="name"><strong>Gaurab Das '25</strong></div>
-                <div class="position">Tech Lead</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/jacob.jpg">
-              <div class="about">
-                <div class="name"><strong>Jacob David '26</strong></div>
-                <div class="position">Head Instructor</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/paco.png">
-              <div class="about">
-                <div class="name"><strong>Paco Gomez '26</strong></div>
-                <div class="position">Curriculum Lead</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/sri.png">
-              <div class="about">
-                <div class="name"><strong>Sri Saraf '26</strong></div>
-                <div class="position">Server Developer</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/sejal.png">
-              <div class="about">
-                <div class="name"><strong>Sejal Rathi '26</strong></div>
-                <div class="position">Engine Developer</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/jacobj.png">
-              <div class="about">
-                <div class="name"><strong>Jacob Jobraeel '27</strong></div>
-                <div class="position">Sponsorship Director</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/sam.png">
-              <div class="about">
-                <div class="name"><strong>Sam Zhou '27</strong></div>
-                <div class="position">Treasurer</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/matt.jpg">
-              <div class="about">
-                <div class="name"><strong>Matt McManus '23</strong></div>
-                <div class="position">Advisor</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/Sophie.png">
-              <div class="about">
-                <div class="name"><strong>Sophie Yang '24</strong></div>
-                <div class="position">Advisor</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/arruda.jpg">
-              <div class="about">
-                <div class="name"><strong>Gabriel Arruda '24</strong></div>
-                <div class="position">Advisor</div>
-              </div>
-            </div>
-          </div>
-          <div class="ui container">
-            <div class="banner">Alumni</div>
-            <div class="team grid">
-              <!-- Alumni members here -->
-            
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/haijia.jpg">
-              <div class="about">
-                <div class="name"><strong>Haijia Wang '23</strong></div>
-                <div class="position">Instructor (2022)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/andy.jpg">
-              <div class="about">
-                <div class="name"><strong>Andy Zhu '23</strong></div>
-                <div class="position">President (2022)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/shreyas.jpg">
-              <div class="about">
-                <div class="name"><strong>Shreyas Srinivasan '22</strong></div>
-                <div class="position">President (2019, 2020, 2021)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/stephen.jpg">
-              <div class="about">
-                <div class="name"><strong>Stephen Otremba '21</strong></div>
-                <div class="position">Head Instructor (2020, 2021)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/gabe.jpeg">
-              <div class="about">
-                <div class="name"><strong>Gabriel Ramirez '21</strong></div>
-                <div class="position">Tech Lead (2020, 2021)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/nilai.jpeg">
-              <div class="about">
-                <div class="name"><strong>Nilai Sarda '20</strong></div>
-                <div class="position">Instructor (2019, 2020)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/david.jpeg">
-              <div class="about">
-                <div class="name"><strong>David Amirault '20</strong></div>
-                <div class="position">Head Instructor (2019, 2020)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/joe.jpg">
-              <div class="about">
-                <div class="name"><strong>Joe Zurier '19</strong></div>
-                <div class="position">Instructor (2019)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/larry.png">
-              <div class="about">
-                <div class="name"><strong>Larry Zhang '18</strong></div>
-                <div class="position">Marketing (2019)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/jack.jpeg">
-              <div class="about">
-                <div class="name"><strong>Jack Serrino '18</strong></div>
-                <div class="position">President (2019)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/kevin.jpg">
-              <div class="about">
-                <div class="name"><strong>Kevin Wen '16</strong></div>
-                <div class="position">President (2015, 2016)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/justin.jpg">
-              <div class="about">
-                <div class="name"><strong>Justin Martinez '16</strong></div>
-                <div class="position">Co-organizer &amp; Lead Developer (2015)</div>
-              </div>
-            </div>
-            <div class="team single alumni">
-              <img src="img/headshots/alumni/kevinp.jpg">
-              <div class="about">
-                <div class="name"><strong>Kevin Pang '11</strong></div>
-                <div class="position">Founder (2011, 2012)</div>
               </div>
             </div>
           </div>
           <div class="text">Question? Comments? Concerns? We'd love to hear from you.</div>
-          <div class="text">You can reach the Pokerbots Team at <a href="mailto:pokerbots@mit.edu">pokerbots@mit.edu</a>.</div>
+          <div class="text">You can reach the Pokerbots Team at <a href="mailto:yvsemlani@unc.edu">yvsemlani@unc.edu</a>.</div>
         </div>
       </section>
       <footer class="dark center">
         <div class="icons">
-          <a href="mailto:pokerbots@mit.edu"><i class="envelope icon"></i></a>
-          <a href="https://pkr.bot/facebook" target="_blank"><i class="facebook icon"></i></a>
-          <a href="https://pkr.bot/instagram" target="_blank"><i class="instagram icon"></i></a>
+          <a href="mailto:yvsemlani@unc.edu"><i class="envelope icon"></i></a>
           <a href="https://pkr.bot/github" target="_blank"><i class="github icon"></i></a>
-        </div>
-        <div class="copyright">
-          &copy; MIT Pokerbots 2023
-        </div>
-        <div class="accessibility">
-          <a href="https://accessibility.mit.edu">Accessibility</a>
         </div>
         <div class="elevator">
           <a id="elevator" href="#">Back to top</a>
