--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MIT Pokerbots 2024</title>
+    <title>UNC Pokerbots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/favicon.ico">
 
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
     <link rel="stylesheet" href="css/main.css">
 
-    <meta property="og:url" content="https://pokerbots.org" />
-    <meta property="og:title" content="Pokerbots 2023" />
-    <meta property="og:description" content="Pre-registration for 6.176 Pokerbots opens soon!" />
-    <meta property="og:image" content="https://pokerbots.org/img/banner.png" />
+    <meta property="og:url" content="https://uncpokerbots.live" />
+    <meta property="og:title" content="UNC Pokerbots" />
+    <meta property="og:description" content="Get ready for the Pokerbots 2024-2025 season!" />
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -65,9 +64,9 @@
         <img src="img/diamond.svg" onerror="this.onerror=null; this.src='img/diamond.png'" class="bg right">
         <div class="ui container">
           <div class="title">What is Pokerbots?</div>
-          <div class="text">6.9630, or MIT Pokerbots, is a computerized poker tournament. Teams have one month to program a completely autonomous pokerbot which competes against other bots in a unique poker variant.</div>
+          <div class="text">UNC Pokerbots, is a computerized poker tournament. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
           <div class="text">Competitors must learn and apply concepts in mathematics, computer science, and economics not normally developed together in academic settings in order to conquer their opponents and emerge victorious.</div>
-          <div class="text">Last year's competition featured over $40,000 in prizes and attention from the most prestigious quantitative trading and technology firms. This IAP, channel your programming ability and strategic quantitative thinking skills to become the reigning Pokerbots champion!</div>
+          <div class="text">This year marks the first season of UNC Pokerbots. The competition will be offering attention from top companies, cash prizes, and other goodies. This season challenge yourself to implement the most effective pokerbot and become our first ever UNC Pokerbots champion!</div>
         </div>
       </section>
       <section id="faq" class="blue">
@@ -92,7 +91,7 @@
             <div class="row">
               <div class="column">
                 <h2>What form of poker will it be?</h2>
-                <p>We are keeping the game and tournament structure secret. You will hear all about it during the challenge unveiling in early January 2024.</p>
+                <p>The poker format will be based on No Limit Texas Hold 'em with full details being released at the start of the competition.</p>
               </div>
               <div class="column">
                 <h2>How many members can make up a team?</h2>
@@ -102,7 +101,6 @@
                 <h2>How do I register?</h2>
                 <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">Sign up</a> and we will notify you when competition registration opens.</p>
               </div>
-              
             </div>
             <div class="row">
               <div class="column">
@@ -111,7 +109,11 @@
               </div>
               <div class="column">
                 <h2>How much time will it take to make a pokerbot?</h2>
-                <p>Creating a functioning pokerbot takes no time at all. However, creating a competitive and strategic pokerbot will require more effort and experimentation. Ultimately, the more you put into your pokerbot, the more value you will receive from the class!</p>
+                <p>Creating a functioning pokerbot takes no time at all. However, creating a competitive and strategic pokerbot will require more effort and experimentation. Ultimately, the more you put into your pokerbot, the more value you will receive from this competition!</p>
+              </div>
+              <div class="column">
+                <h2>How can I get this at my school?</h2>
+                <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.live" style="color:white;">team@uncpokerbots.live</a>. Additionally, official partner schools will be eligible to participate in the inter-school league!</p>
               </div>
             </div>
           </div>
@@ -121,7 +123,7 @@
         <img src="img/heart.svg" onerror="this.onerror=null; this.src='img/heart.png'" class="bg right">
         <div class="ui container">
           <div class="title">2024 Sponsors</div>
-          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:yvsemlani@unc.edu">yvsemlani@unc.edu</a>.</div>
+          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.live">sponsor@uncpokerbots.live</a>.</div>
           <div class="diamond">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND TIER</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
@@ -165,26 +167,26 @@
             <div class="team single">
               <img src="img/logos/1657424861593.jpeg">
               <div class="about">
-                <div class="name"><strong>Yash Semlani '28</strong></div>
+                <div class="name"><strong>Yash Semlani UNC '28</strong></div>
                 <div class="position">President</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/logos/IMG_1184.PNG">
               <div class="about">
-                <div class="name"><strong>Samir Kassam '29</strong></div>
-                <div class="position">Vice President</div>
+                <div class="name"><strong>Samir Kassam CVHS '24</strong></div>
+                <div class="position">Site Developer</div>
               </div>
             </div>
           </div>
           <div class="text">Question? Comments? Concerns? We'd love to hear from you.</div>
-          <div class="text">You can reach the Pokerbots Team at <a href="mailto:yvsemlani@unc.edu">yvsemlani@unc.edu</a>.</div>
+          <div class="text">You can reach the Pokerbots Team at <a href="mailto:team@uncpokerbots.live">team@uncpokerbots.live</a>.</div>
         </div>
       </section>
       <footer class="dark center">
         <div class="icons">
-          <a href="mailto:yvsemlani@unc.edu"><i class="envelope icon"></i></a>
-          <a href="https://pkr.bot/github" target="_blank"><i class="github icon"></i></a>
+          <a href="mailto:team@uncpokerbots.live"><i class="envelope icon"></i></a>
+          <a href="https://github.com/UNC-Pokerbots" target="_blank"><i class="github icon"></i></a>
         </div>
         <div class="elevator">
           <a id="elevator" href="#">Back to top</a>
