changing link and email colors + removing blotto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
             <p>Get ready for the Pokerbots 2024-2025 season!</p> 
-         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
+         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
             <!-- p>Stay tuned for next year</p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
           </div>
@@ -72,7 +72,7 @@
       <section id="faq" class="blue">
         <img src="img/club.svg" onerror="this.onerror=null; this.src='img/club.png'" class="bg left">
         <div class="ui container">
-          <div class="title center">FAQ</div>
+          <div class="title center dark">FAQ</div>
           <div class="ui three column stackable grid">
             <div class="row">
               <div class="column">
@@ -99,13 +99,13 @@
               </div>
               <div class="column">
                 <h2>How do I register?</h2>
-                <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">Sign up</a> and we will notify you when competition registration opens.</p>
+                <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> and we will notify you when competition registration opens.</p>
               </div>
             </div>
             <div class="row">
               <div class="column">
                 <h2>Do I have to be a UNC student to participate?</h2>
-                <p>No, you do not have to be a UNC student to participate- you can also be a Duke or NCSU student. If you are from none of these three schools, you can still sign up for our <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:white; text-decoration:underline;">mailing list</a> and we will notify you as soon as you are eligible to compete.</p>
+                <p>No, you do not have to be a UNC student to participate- you can also be a Duke or NCSU student. If you are from none of these three schools, you can still sign up for our <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">mailing list</a> and we will notify you as soon as you are eligible to compete.</p>
               </div>
               <div class="column">
                 <h2>How much time will it take to make a pokerbot?</h2>
@@ -113,7 +113,7 @@
               </div>
               <div class="column">
                 <h2>How can I get this at my school?</h2>
-                <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.live" style="color:white;">team@uncpokerbots.live</a>. Additionally, official partner schools will be eligible to participate in the inter-school league!</p>
+                <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.live" style="color:blue;">team@uncpokerbots.live</a>. Official partner schools will be invited to participate in the inter-school league!</p>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
         <img src="img/heart.svg" onerror="this.onerror=null; this.src='img/heart.png'" class="bg right">
         <div class="ui container">
           <div class="title">2024 Sponsors</div>
-          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.live">sponsor@uncpokerbots.live</a>.</div>
+          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.live" style="color: blue;">sponsor@uncpokerbots.live</a>.</div>
           <div class="diamond">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND TIER</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="text">Question? Comments? Concerns? We'd love to hear from you.</div>
-          <div class="text">You can reach the Pokerbots Team at <a href="mailto:team@uncpokerbots.live">team@uncpokerbots.live</a>.</div>
+          <div class="text">You can reach the Pokerbots Team at <a href="mailto:team@uncpokerbots.live" style="color: blue;">team@uncpokerbots.live</a>.</div>
         </div>
       </section>
       <footer class="dark center">
