--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
               <div class="column">
                 <h2>How can I get this at my school?</h2>
-                <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.live" style="color:blue;">team@uncpokerbots.live</a>. Official partner schools will be invited to participate in the inter-school league!</p>
+                <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.com" style="color:blue;">team@uncpokerbots.com</a>. Official partner schools will be invited to participate in the inter-school league!</p>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
         <img src="img/heart.svg" onerror="this.onerror=null; this.src='img/heart.png'" class="bg right">
         <div class="ui container">
           <div class="title">2024 Sponsors</div>
-          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.live" style="color: blue;">sponsor@uncpokerbots.live</a>.</div>
+          <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.com" style="color: blue;">sponsor@uncpokerbots.com</a>.</div>
           <div class="diamond">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND TIER</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
@@ -180,12 +180,12 @@
             </div>
           </div>
           <div class="text">Question? Comments? Concerns? We'd love to hear from you.</div>
-          <div class="text">You can reach the Pokerbots Team at <a href="mailto:team@uncpokerbots.live" style="color: blue;">team@uncpokerbots.live</a>.</div>
+          <div class="text">You can reach the Pokerbots Team at <a href="mailto:team@uncpokerbots.com" style="color: blue;">team@uncpokerbots.com</a>.</div>
         </div>
       </section>
       <footer class="dark center">
         <div class="icons">
-          <a href="mailto:team@uncpokerbots.live"><i class="envelope icon"></i></a>
+          <a href="mailto:team@uncpokerbots.com"><i class="envelope icon"></i></a>
           <a href="https://github.com/UNC-Pokerbots" target="_blank"><i class="github icon"></i></a>
         </div>
         <div class="elevator">
