adding benjamin + colby to landing page; fixing centering issues and image overlays

--- a/index.html
+++ b/index.html
@@ -174,17 +174,31 @@
           <div class="title">Meet the team!</div>
           <div class="team grid">
             <div class="team single">
-              <img src="img/logos/1657424861593.jpeg">
+              <img src="img/headshots/yash.png">
               <div class="about">
-                <div class="name"><strong>Yash Semlani UNC '28</strong></div>
-                <div class="position">President</div>
+                <div class="name"><strong>Yash Semlani '28</strong></div>
+                <div class="position">President - UNC</div>
               </div>
             </div>
             <div class="team single">
-              <img src="img/logos/IMG_1184.PNG">
+              <img src="img/headshots/colby.png">
               <div class="about">
-                <div class="name"><strong>Samir Kassam CVHS '24</strong></div>
-                <div class="position">Site Developer</div>
+                <div class="name"><strong>Colby Eagan '26</strong></div>
+                <div class="position">Vice President - UNC</div>
+              </div>
+            </div>
+            <div class="team single">
+              <img src="img/headshots/benjamin.png">
+              <div class="about">
+                <div class="name"><strong>Benjamin Goroshnik '25</strong></div>
+                <div class="position">Head of Innovation - UNC</div>
+              </div>
+            </div>
+            <div class="team single">
+              <img src="img/headshots/samir.png">
+              <div class="about">
+                <div class="name"><strong>Samir Kassam '29</strong></div>
+                <div class="position">Site Developer - CVHS</div>
               </div>
             </div>
           </div>
