adding linkedin links to team images

--- a/index.html
+++ b/index.html
@@ -176,28 +176,28 @@
             <div class="team single">
               <img src="img/headshots/yash.png">
               <div class="about">
-                <div class="name"><strong>Yash Semlani '28</strong></div>
+                <div class="name"><strong><a href="https://www.linkedin.com/in/yash-semlani-38716b157/" style="color: inherit;">Yash Semlani '28</a></strong></div>
                 <div class="position">President - UNC</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/colby.png">
               <div class="about">
-                <div class="name"><strong>Colby Eagan '26</strong></div>
+                <div class="name"><strong><a href="https://www.linkedin.com/in/colbyeagan/" style="color: inherit;">Colby Eagan '26</a></strong></div>
                 <div class="position">Vice President - UNC</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/benjamin.png">
               <div class="about">
-                <div class="name"><strong>Benjamin Goroshnik '25</strong></div>
+                <div class="name"><strong><a href="https://www.linkedin.com/in/bengor/" style="color: inherit;">Benjamin Goroshnik '25</a></strong></div>
                 <div class="position">Head of Innovation - UNC</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/samir.png">
               <div class="about">
-                <div class="name"><strong>Samir Kassam '29</strong></div>
+                <div class="name"><strong><a href="https://www.linkedin.com/in/samir-kassam-330579245/" style="color: inherit;">Samir Kassam '29</a></strong></div>
                 <div class="position">Site Developer - CVHS</div>
               </div>
             </div>
