Adding Sponsors coming soon

--- a/index.html
+++ b/index.html
@@ -134,28 +134,20 @@
           <div class="title">2024 Sponsors</div>
           <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.com" style="color: blue;">sponsor@uncpokerbots.com</a>.</div>
           <div class="diamond">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND TIER</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND SPONSORS - COMING SOON<span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
             <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
           </div>
           <div class="platinum">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM TIER</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS - COMING SOON</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
             <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
           </div>
           <div class="gold">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD TIER</span></span>
-            <!-- <a href="https://www.citadel.com"><img src="img/logos/2024_Gold_Citadel.png"></a>
-            <a href="https://www.drw.com"><img src="img/logos/2022_Gold_DRW.png"></a>
-            <a href="https://www.janestreet.com"><img src="img/logos/2024_Gold_JaneStreet.png"></a>
-            <a href="https://www.jumptrading.com/"><img src="img/logos/2022_Gold_JumpTrading.png"></a>
-            <a href="https://trexquant.com/"><img src="img/logos/2024_Gold_Trexquant2.png"></a>
-            <a href="https://www.seveneightcapital.com/"><img src="img/logos/Gold_SevenEight.jpg"></a>
-            <a href="https://www.sig.com"><img src="img/logos/2022_Gold_SIG.jpg"></a>
-            <a href="https://fiverings.com/"><img src="img/logos/2024_Gold_FiveRings.png"></a> -->
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD SPONSORS - COMING SOON</span></span>
           </div>
           <div class="silver">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#82969a;'>SILVER TIER</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#82969a;'>SILVER SPONSORS - COMING SOON</span></span>
             <!-- <a href="https://akunacapital.com/"><img src="img/logos/2024_Silver_Akuna.png"></a>
             <a href="https://www.chicagotrading.com"><img src="img/logos/2024_Silver_CTC.jpg"></a>
             <a href="https://www.hap-capital.com/"><img src="img/logos/2022_Platinum_HAP.png"</a>
@@ -163,7 +155,7 @@
             <a href="https://www.twosigma.com"><img src="img/logos/2024_Silver_TwoSigma.jpg"></a> --> -
           </div>
           <div class="bronze">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE TIER</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE SPONSORS - COMING SOON</span></span>
             <!-- <a href="https://akunacapital.com/"><img src="img/logos/cover2.jpg"></a> -->
           </div>
         </div>
