Adding Ananya + Nicholas

--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
               </div>
             </div>
             <div class="team single">
+              <img src="img/headshots/ananyagarg.jpeg">
+              <div class="about">
+                <div class="name"><strong><a href="https://www.linkedin.com/in/ananyakgarg/" style="color: inherit;">Ananya Garg '25</a></strong></div>
+                <div class="position">Co-Head of Tech - UNC</div>
+              </div>
+            </div>
+            <div class="team single">
+              <img src="img/headshots/nicholassanaie.jpeg">
+              <div class="about">
+                <div class="name"><strong><a href="https://www.linkedin.com/in/nsanaie/" style="color: inherit;">Nicholas Sanaie '26</a></strong></div>
+                <div class="position">Co-Head of Tech - UNC</div>
+              </div>
+            </div>
+            <div class="team single">
               <img src="img/headshots/samir.png">
               <div class="about">
                 <div class="name"><strong><a href="https://www.linkedin.com/in/samir-kassam-330579245/" style="color: inherit;">Samir Kassam '29</a></strong></div>
