--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <img src="img/diamond.svg" onerror="this.onerror=null; this.src='img/diamond.png'" class="bg right">
         <div class="ui container">
           <div class="title">What is Pokerbots?</div>
-          <div class="text">UNC Pokerbots, is a computerized poker tournament. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
+          <div class="text">UNC Pokerbots is a computerized poker tournament. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
           <div class="text">Competitors must learn and apply concepts in mathematics, computer science, and economics not normally developed together in academic settings in order to conquer their opponents and emerge victorious.</div>
           <div class="text">This year marks the first season of UNC Pokerbots. The competition will be offering attention from top companies, cash prizes, and other goodies. This season challenge yourself to implement the most effective pokerbot and become our first ever UNC Pokerbots champion!</div>
         </div>
