Adding Jane Street as a Diamond Sponsor, Editing descriptions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:url" content="https://uncpokerbots.live" />
     <meta property="og:title" content="UNC Pokerbots" />
-    <meta property="og:description" content="Get ready for the Pokerbots 2024-2025 season!" />
+    <meta property="og:description" content="Get ready for Pokerbots 2024-2025!" />
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -73,7 +73,7 @@
         <img src="img/diamond.svg" onerror="this.onerror=null; this.src='img/diamond.png'" class="bg right">
         <div class="ui container">
           <div class="title">What is Pokerbots?</div>
-          <div class="text">UNC Pokerbots is a computerized poker tournament. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
+          <div class="text">UNC Pokerbots is a computerized poker tournament run under the Carolina Poker Club. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
           <div class="text">Competitors must learn and apply concepts in mathematics, computer science, and economics not normally developed together in academic settings in order to conquer their opponents and emerge victorious.</div>
           <div class="text">This year marks the first season of UNC Pokerbots. The competition will be offering attention from top companies, cash prizes, and other goodies. This season challenge yourself to implement the most effective pokerbot and become our first ever UNC Pokerbots champion!</div>
         </div>
@@ -86,15 +86,15 @@
             <div class="row">
               <div class="column">
                 <h2>Why Poker?</h2>
-                <p>As a game of incomplete information and uncertainty, poker is a prime application of the game theory concepts and decision making skills essential to trading. While traders make risk decisions based on the limited information they get from the markets, poker players make decisions based on hidden information as well, taking into account factors such as expected value and probability distributions.</p>
+                <p>Poker, characterized by its incomplete information and inherent uncertainty, serves as an excellent platform for applying game theory concepts and honing decision-making skills. Similar to how traders navigate markets with limited data, poker players must make choices based on concealed information. Both scenarios require consideration of factors like expected value and probability distributions, making poker an ideal training ground for developing strategic thinking in uncertain environments.</p>
               </div>
               <div class="column">
                 <h2>I thought this was a programming competition? What language is it in?</h2>
-                <p>It is! To build a working pokerbot only requires both critical thinking ability and an eagerness to learn. However, an understanding of machine learning, algorithms, and data science can go a long way towards creating an advanced pokerbot. Competitiors can code in their choice of Python, Java, or C++.</p>
+                <p>It is! Creating a functional pokerbot primarily demands critical thinking skills and a willingness to learn. While a grasp of machine learning, algorithms, and data science can significantly enhance your bot's sophistication, these aren't prerequisites. Participants have the flexibility to program their bots using Python, Java, or C++, allowing for a range of coding preferences and expertise levels.</p>
               </div>
               <div class="column">
                 <h2>Machine learning? Algorithms? Exactly how much coding experience is necessary?</h2>
-                <p>We welcome students with all levels of programming experience. Nevertheless, some previous coding experience would certainly be helpful. Although not necessary, we recommend you have at least one team member with some programming experience.</p>
+                <p>We welcome students with all levels of programming experience. However, previous coding experience would certainly be helpful. While not a requirement, we strongly recommend you have at least one team member with programming experience.</p>
               </div>
             </div>
             <div class="row">
@@ -104,7 +104,7 @@
               </div>
               <div class="column">
                 <h2>How many members can make up a team?</h2>
-                <p>Teams may be composed of 1-4 students.</p>
+                <p>Teams may be composed of 1 - 4 students.</p>
               </div>
               <div class="column">
                 <h2>How do I register?</h2>
@@ -134,17 +134,16 @@
           <div class="title">2024 Sponsors</div>
           <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.com" style="color: blue;">sponsor@uncpokerbots.com</a>.</div>
           <div class="diamond">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND SPONSORS - COMING SOON<span></span>
-            <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
-            <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND SPONSORS<span></span>
+            <a href="https://www.janestreet.com/"><img src="img/logos/diamond_janestreet.png" width="193" height="150"></a>
           </div>
           <div class="platinum">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS - COMING SOON</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
             <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
           </div>
           <div class="gold">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD SPONSORS - COMING SOON</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD SPONSORS</span></span>
           </div>
           <div class="silver">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#82969a;'>SILVER SPONSORS - COMING SOON</span></span>
@@ -155,7 +154,7 @@
             <a href="https://www.twosigma.com"><img src="img/logos/2024_Silver_TwoSigma.jpg"></a> --> -
           </div>
           <div class="bronze">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE SPONSORS - COMING SOON</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE SPONSORS</span></span>
             <!-- <a href="https://akunacapital.com/"><img src="img/logos/cover2.jpg"></a> -->
           </div>
         </div>
