Fixing sponsor logos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Pre-registration for Pokerbots IAP 2023 opening soon! Info sessions: -->
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
-            <p>Get ready for the Pokerbots 2024-2025 season!</p> 
+            <p>Get ready for the Pokerbots 2024-2025!</p> 
          <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
             <!-- p>Stay tuned for next year</p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
@@ -134,16 +134,16 @@
           <div class="title">2024 Sponsors</div>
           <div class="text">Interested in sponsoring? Send us an email at <a href="mailto:sponsor@uncpokerbots.com" style="color: blue;">sponsor@uncpokerbots.com</a>.</div>
           <div class="diamond">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'>DIAMOND SPONSORS<span></span>
-            <a href="https://www.janestreet.com/"><img src="img/logos/diamond_janestreet.png" width="193" height="150"></a>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'></span></span>
+            <a href="https://www.janestreet.com/"><img src="img/logos/diamond_janestreet.png" style="max-width: 25%; height: auto;"></a>
           </div>
           <div class="platinum">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS - COMING SOON</span></span>
             <!-- <a href="https://www.hudsonrivertrading.com"><img src="img/logos/2022_Platinum_HRT.png" width="193" height="150"></a>
             <a href="https://app.gtowizard.com/"><img src="img/logos/2024_Platinum_GTOW.png" height="150"></a> -->
           </div>
           <div class="gold">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD SPONSORS</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#c29a36;'>GOLD SPONSORS - COMING SOON</span></span>
           </div>
           <div class="silver">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#82969a;'>SILVER SPONSORS - COMING SOON</span></span>
@@ -154,7 +154,7 @@
             <a href="https://www.twosigma.com"><img src="img/logos/2024_Silver_TwoSigma.jpg"></a> --> -
           </div>
           <div class="bronze">
-            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE SPONSORS</span></span>
+            <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#CD7F32;'>BRONZE SPONSORS - COMING SOON</span></span>
             <!-- <a href="https://akunacapital.com/"><img src="img/logos/cover2.jpg"></a> -->
           </div>
         </div>
