Added carolina poker club attribution

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Pre-registration for Pokerbots IAP 2023 opening soon! Info sessions: -->
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
-            <p>Get ready for the Pokerbots 2024-2025!</p> 
+            <p>Get ready for Pokerbots 2024-2025!</p> 
          <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
             <!-- p>Stay tuned for next year</p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
@@ -73,7 +73,7 @@
         <img src="img/diamond.svg" onerror="this.onerror=null; this.src='img/diamond.png'" class="bg right">
         <div class="ui container">
           <div class="title">What is Pokerbots?</div>
-          <div class="text">UNC Pokerbots is a computerized poker tournament run under the Carolina Poker Club. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
+          <div class="text">UNC Pokerbots is a computerized poker tournament run by the Carolina Poker Club. Teams will spend the season programming a completely autonomous pokerbot which competes against other bots in no-limit texas hold 'em.</div>
           <div class="text">Competitors must learn and apply concepts in mathematics, computer science, and economics not normally developed together in academic settings in order to conquer their opponents and emerge victorious.</div>
           <div class="text">This year marks the first season of UNC Pokerbots. The competition will be offering attention from top companies, cash prizes, and other goodies. This season challenge yourself to implement the most effective pokerbot and become our first ever UNC Pokerbots champion!</div>
         </div>
