--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
                 <h2>How can I get this at my school?</h2>
                 <p>If you'd like to run a pokerbots competition for your own school contact us at <a href="mailto:team@uncpokerbots.com" style="color:blue;">team@uncpokerbots.com</a>. Official partner schools will be invited to participate in the inter-school league!</p>
               </div>
-            <div class="row"></div>
+            <div class="row">
               <div class="column">
                 <h2>Are you affiliated with MIT Pokerbots?</h2>
                 <p>UNC Pokerbots is NOT affiliated with MIT Pokerbots in any way. We are an independent organization inspired by MIT Pokerbots. The splash page and competition server were modified from the repositories MIT Pokerbots' have listed on their Github.</p>
               </div>
+            </div>
             </div>
           </div>
         </div>
