--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
               </div>
             <div class="row">
               <div class="column">
+                <h2></h2>
+                <p></p>
+              </div>
+              <div class="column">
+                <h2></h2>
+                <p></p>
+              </div>
+              <div class="column">
                 <h2>Are you affiliated with MIT Pokerbots?</h2>
                 <p>UNC Pokerbots is NOT affiliated with MIT Pokerbots in any way. We are an independent organization inspired by MIT Pokerbots. The splash page and competition server were modified from the repositories MIT Pokerbots' have listed on their Github.</p>
               </div>
